NetBSD Problem Report #53224

From www@NetBSD.org  Sat Apr 28 14:39:35 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 569DD7A188
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 28 Apr 2018 14:39:35 +0000 (UTC)
Message-Id: <20180428143934.606917A1F6@mollari.NetBSD.org>
Date: Sat, 28 Apr 2018 14:39:34 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/aarch64/include/db_machdep.h: many bitmask errors ?
X-Send-Pr-Version: www-1.0

>Number:         53224
>Category:       kern
>Synopsis:       src/sys/arch/aarch64/include/db_machdep.h: many bitmask errors ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 28 14:40:00 +0000 2018
>Closed-Date:    Mon Apr 30 06:40:35 +0000 2018
>Last-Modified:  Mon Apr 30 06:40:35 +0000 2018
>Originator:     David Binderman
>Release:        cvs-20180428
>Organization:
>Environment:
>Description:
> [src/sys/arch/aarch64/include/db_machdep.h:179]: (style) Expression '(X & 0x7e400000) == 0x29800000' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:155]: (style) Expression '(X & 0x7e400000) == 0x29c00000' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:152]: (style) Expression '(X & 0xbf7ffc00) == 0x48dffc00' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:151]: (style) Expression '(X & 0xbf7ffc00) == 0x88dffc00' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:150]: (style) Expression '(X & 0xbf800000) == 0x79800000' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:149]: (style) Expression '(X & 0xbf800c00) == 0x78a00800' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:147]: (style) Expression '(X & 0xbfa00400) == 0x78800c00' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:145]: (style) Expression '(X & 0xbfa00c00) == 0x78800000' is always false.
> [src/sys/arch/aarch64/include/db_machdep.h:177]: (style) Expression '(X & 0xbfc00000) == 0x79000000' is always false.

Many more examples from lines 123 to 179.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Ryo Shimizu" <ryo@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53224 CVS commit: src/sys/arch/aarch64/include
Date: Sat, 28 Apr 2018 17:42:07 +0000

 Module Name:	src
 Committed By:	ryo
 Date:		Sat Apr 28 17:42:07 UTC 2018

 Modified Files:
 	src/sys/arch/aarch64/include: db_machdep.h

 Log Message:
 Oops, my previous commit is totally wrong. recast mask/pattern list.
 pointed out by David Binderman in PR/53224, thanks.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/aarch64/include/db_machdep.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 Apr 2018 06:40:35 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.